# 2

./: .gitignore  README.md
DroneCompetition/: ardupilot_mavros.sh  mavproxy.sh  run_docker.sh
DroneCompetition/src/drone_control/: CMakeLists.txt  package.xml
DroneCompetition/src/drone_control/config/: OffboardControl.yaml  camera.yaml  can_config.yaml  land_config.yaml  pos_config.yaml
DroneCompetition/src/drone_control/include/drone_control/: frame_transforms_t.h
DroneCompetition/src/drone_control/launch/: offboard_control_launch_t.yaml  sensor_combined_listener.launch.py  vehicle_local_position_demo.launch.py
DroneCompetition/src/drone_control/src/lib/: frame_transforms_t.cpp
DroneCompetition/src/drone_control/src/listeners_t/: GpsStatus_listeners.cpp  pose_subscriber_t.cpp
DroneCompetition/src/drone_control/src/offboard_control_t/: AutoTune_t.cpp  AutoTune_t.h  FuzzyPID_t.cpp  FuzzyPID_t.h  InertialNav_t.cpp  InertialNav_t.h  MYPID_T.h  Motors_t.h  Motros_t.cpp  OffboardControl_Base_t.cpp  OffboardControl_Base_t.h  OffboardControl_t.cpp  OffboardControl_t.h  PID_t.cpp  PID_t.h  PosControl_t.cpp  PosControl_t.h  Readyaml_t.h  StateMachine_t.cpp  StateMachine_t.h  TrajectoryGenerator_t.cpp  TrajectoryGenerator_t.h  main.cpp  math_t.cpp  math_t.h  math_utils_t.h  utils_t.h
DroneCompetition/src/drone_control/test/: pipeline_io_test.py
